src/native/collector/include/hsm_collector/hsm_collector.h

typedef struct hsm_collector_t hsm_collector_t;
typedef struct hsm_sensor_t hsm_sensor_t;
typedef enum hsm_result_t HSM_ENUM_INT32
{
    HSM_RESULT_OK = 0,
    HSM_RESULT_INVALID_ARGUMENT = 1,
    HSM_RESULT_INVALID_STATE = 2,
    HSM_RESULT_NOT_FOUND = 3,
    HSM_RESULT_LIMIT_EXCEEDED = 4,
    HSM_RESULT_INTERNAL_ERROR = 255
} hsm_result_t;
typedef enum hsm_collector_status_t HSM_ENUM_INT32
{
    HSM_COLLECTOR_STATUS_STOPPED = 0,
    HSM_COLLECTOR_STATUS_STARTING = 1,
    HSM_COLLECTOR_STATUS_RUNNING = 2,
    HSM_COLLECTOR_STATUS_STOPPING = 3,
    HSM_COLLECTOR_STATUS_DISPOSED = 4
} hsm_collector_status_t;
typedef enum hsm_sensor_status_t HSM_ENUM_INT32
{
    HSM_SENSOR_STATUS_OFF_TIME = 0,
    HSM_SENSOR_STATUS_OK = 1,
    HSM_SENSOR_STATUS_WARNING = 2,
    HSM_SENSOR_STATUS_ERROR = 3
} hsm_sensor_status_t;
typedef enum hsm_sensor_type_t HSM_ENUM_INT32
{
    HSM_SENSOR_TYPE_BOOLEAN = 0,
    HSM_SENSOR_TYPE_INT = 1,
    HSM_SENSOR_TYPE_DOUBLE = 2,
    HSM_SENSOR_TYPE_STRING = 3,
    HSM_SENSOR_TYPE_INT_BAR = 4,
    HSM_SENSOR_TYPE_DOUBLE_BAR = 5,
    HSM_SENSOR_TYPE_FILE = 6,
    HSM_SENSOR_TYPE_TIMESPAN = 7,
    HSM_SENSOR_TYPE_VERSION = 8,
    HSM_SENSOR_TYPE_RATE = 9,
    HSM_SENSOR_TYPE_ENUM = 10
} hsm_sensor_type_t;
typedef enum hsm_alert_kind_t HSM_ENUM_INT32
{
    HSM_ALERT_KIND_INSTANT = 0,
    HSM_ALERT_KIND_BAR = 1,
    HSM_ALERT_KIND_TTL = 2
} hsm_alert_kind_t;
typedef enum hsm_alert_combination_t HSM_ENUM_INT32
{
    HSM_ALERT_COMBINATION_AND = 0,
    HSM_ALERT_COMBINATION_OR = 1
} hsm_alert_combination_t;
typedef enum hsm_alert_operation_t HSM_ENUM_INT32
{
    HSM_ALERT_OP_LESS_THAN_OR_EQUAL = 0,
    HSM_ALERT_OP_LESS_THAN = 1,
    HSM_ALERT_OP_GREATER_THAN = 2,
    HSM_ALERT_OP_GREATER_THAN_OR_EQUAL = 3,
    HSM_ALERT_OP_EQUAL = 4,
    HSM_ALERT_OP_NOT_EQUAL = 5,
    HSM_ALERT_OP_IS_CHANGED = 20,
    HSM_ALERT_OP_IS_ERROR = 21,
    HSM_ALERT_OP_IS_OK = 22,
    HSM_ALERT_OP_IS_CHANGED_TO_ERROR = 23,
    HSM_ALERT_OP_IS_CHANGED_TO_OK = 24,
    HSM_ALERT_OP_CONTAINS = 30,
    HSM_ALERT_OP_STARTS_WITH = 31,
    HSM_ALERT_OP_ENDS_WITH = 32,
    HSM_ALERT_OP_RECEIVED_NEW_VALUE = 50
} hsm_alert_operation_t;
typedef enum hsm_alert_property_t HSM_ENUM_INT32
{
    HSM_ALERT_PROP_STATUS = 0,
    HSM_ALERT_PROP_COMMENT = 1,
    HSM_ALERT_PROP_VALUE = 20,
    HSM_ALERT_PROP_MIN = 101,
    HSM_ALERT_PROP_MAX = 102,
    HSM_ALERT_PROP_MEAN = 103,
    HSM_ALERT_PROP_COUNT = 104,
    HSM_ALERT_PROP_LAST_VALUE = 105,
    HSM_ALERT_PROP_FIRST_VALUE = 106,
    HSM_ALERT_PROP_LENGTH = 120,
    HSM_ALERT_PROP_ORIGINAL_SIZE = 151,
    HSM_ALERT_PROP_NEW_SENSOR_DATA = 200,
    HSM_ALERT_PROP_EMA_VALUE = 210,
    HSM_ALERT_PROP_EMA_MIN = 211,
    HSM_ALERT_PROP_EMA_MAX = 212,
    HSM_ALERT_PROP_EMA_MEAN = 213,
    HSM_ALERT_PROP_EMA_COUNT = 214
} hsm_alert_property_t;
typedef enum hsm_alert_target_type_t HSM_ENUM_INT32
{
    HSM_ALERT_TARGET_CONST = 0,
    HSM_ALERT_TARGET_LAST_VALUE = 1
} hsm_alert_target_type_t;
typedef enum hsm_alert_destination_mode_t HSM_ENUM_INT32
{
    HSM_ALERT_DESTINATION_NOT_INITIALIZED = 1,
    HSM_ALERT_DESTINATION_EMPTY = 2,
    HSM_ALERT_DESTINATION_FROM_PARENT = 3,
    HSM_ALERT_DESTINATION_ALL_CHATS = 200
} hsm_alert_destination_mode_t;
typedef enum hsm_alert_repeat_mode_t HSM_ENUM_INT32
{
    HSM_ALERT_REPEAT_FIVE_MINUTES = 5,
    HSM_ALERT_REPEAT_TEN_MINUTES = 6,
    HSM_ALERT_REPEAT_FIFTEEN_MINUTES = 7,
    HSM_ALERT_REPEAT_THIRTY_MINUTES = 10,
    HSM_ALERT_REPEAT_HOURLY = 20,
    HSM_ALERT_REPEAT_DAILY = 50,
    HSM_ALERT_REPEAT_WEEKLY = 100
} hsm_alert_repeat_mode_t;
typedef enum hsm_alert_icon_t HSM_ENUM_INT32
{
    HSM_ALERT_ICON_OK = 0,
    HSM_ALERT_ICON_WARNING = 1,
    HSM_ALERT_ICON_ERROR = 2,
    HSM_ALERT_ICON_PAUSE = 3,
    HSM_ALERT_ICON_ARROW_UP = 10,
    HSM_ALERT_ICON_ARROW_DOWN = 11,
    HSM_ALERT_ICON_CLOCK = 100,
    HSM_ALERT_ICON_HOURGLASS = 101
} hsm_alert_icon_t;
typedef struct hsm_collector_options_t
{
    const char* access_key;     
    const char* server_address; 
    int32_t port;               
    const char* client_name;    
    const char* module;         
    const char* computer_name;  
    int32_t max_queue_size;            
    int32_t max_values_in_package;     
    int32_t package_collect_period_ms; 
    int32_t request_timeout_ms;        
    int32_t max_sensors;               
    bool allow_untrusted_server_certificate; 
    bool allow_plaintext_transport;          
    int64_t exception_deduplicator_window_ms; 
    int32_t max_deduplicated_messages;        
} hsm_collector_options_t;
int32_t hsm_collector_version(void);
hsm_result_t hsm_collector_install_linux_metric_sources(hsm_collector_t* collector);
typedef enum hsm_log_level_t HSM_ENUM_INT32
{
    HSM_LOG_LEVEL_DEBUG = 0,
    HSM_LOG_LEVEL_INFO = 1,
    HSM_LOG_LEVEL_ERROR = 2
} hsm_log_level_t;
typedef struct hsm_enum_option_t
{
    int32_t key;
    const char* value;
    int32_t color;
    const char* description;
} hsm_enum_option_t;
typedef enum hsm_default_sensor_t HSM_ENUM_INT32
{
    HSM_DEFAULT_PROCESS_CPU = 0,
    HSM_DEFAULT_PROCESS_MEMORY = 1,
    HSM_DEFAULT_PROCESS_THREAD_COUNT = 2,
    HSM_DEFAULT_PROCESS_THREADPOOL_THREAD_COUNT = 3,
    HSM_DEFAULT_TOTAL_CPU = 10,
    HSM_DEFAULT_FREE_RAM_MEMORY = 11,
    HSM_DEFAULT_FREE_DISK_SPACE = 20,
    HSM_DEFAULT_FREE_DISK_SPACE_PREDICTION = 21,
    HSM_DEFAULT_ACTIVE_DISK_TIME = 22,
    HSM_DEFAULT_DISK_QUEUE_LENGTH = 23,
    HSM_DEFAULT_DISK_AVERAGE_WRITE_SPEED = 24,
    HSM_DEFAULT_UNIX_FREE_DISK_SPACE = 25,
    HSM_DEFAULT_UNIX_FREE_DISK_SPACE_PREDICTION = 26,
    HSM_DEFAULT_WINDOWS_LAST_RESTART = 30,
    HSM_DEFAULT_WINDOWS_INSTALL_DATE = 31,
    HSM_DEFAULT_WINDOWS_LAST_UPDATE = 32,
    HSM_DEFAULT_WINDOWS_VERSION = 33,
    HSM_DEFAULT_WINDOWS_APPLICATION_ERROR_LOGS = 40,
    HSM_DEFAULT_WINDOWS_SYSTEM_ERROR_LOGS = 41,
    HSM_DEFAULT_WINDOWS_APPLICATION_WARNING_LOGS = 42,
    HSM_DEFAULT_WINDOWS_SYSTEM_WARNING_LOGS = 43,
    HSM_DEFAULT_NETWORK_CONNECTIONS_ESTABLISHED = 50,
    HSM_DEFAULT_NETWORK_CONNECTION_FAILURES = 51,
    HSM_DEFAULT_NETWORK_CONNECTIONS_RESET = 52,
    HSM_DEFAULT_NETWORK_INTERFACE_RECEIVED_MB_SEC = 53,
    HSM_DEFAULT_NETWORK_INTERFACE_SENT_MB_SEC = 54,
    HSM_DEFAULT_COLLECTOR_ALIVE = 60,
    HSM_DEFAULT_COLLECTOR_VERSION = 61,
    HSM_DEFAULT_COLLECTOR_ERRORS = 62,
    HSM_DEFAULT_PRODUCT_VERSION = 63,
    HSM_DEFAULT_SERVICE_STATUS = 64,
    HSM_DEFAULT_QUEUE_OVERFLOW = 70,
    HSM_DEFAULT_QUEUE_PACKAGE_VALUES_COUNT = 71,
    HSM_DEFAULT_QUEUE_PACKAGE_PROCESS_TIME = 72,
    HSM_DEFAULT_QUEUE_PACKAGE_CONTENT_SIZE = 73
} hsm_default_sensor_t;
typedef struct hsm_default_sensor_params_t
{
    const char* process_name;    
    const char* disk_letter;     
    const char* interface_name;  
    const char* service_name;    
    int is_host_service;         
    const char* product_version; 
} hsm_default_sensor_params_t;
typedef enum hsm_metric_read_t HSM_ENUM_INT32
{
    HSM_METRIC_READ_OK = 0,       
    HSM_METRIC_READ_NO_VALUE = 1, 
    HSM_METRIC_READ_ERROR = 2,    
    HSM_METRIC_READ_SAMPLE_ERROR = 3
} hsm_metric_read_t;
typedef enum hsm_metric_value_kind_t HSM_ENUM_INT32
{
    HSM_METRIC_VALUE_DOUBLE = 0,     
    HSM_METRIC_VALUE_TIMESPAN_MS = 1 
} hsm_metric_value_kind_t;
typedef enum hsm_default_alerts_options_t HSM_ENUM_INT32
{
    HSM_DEFAULT_ALERTS_NONE = 0,
    HSM_DEFAULT_ALERTS_DISABLE_TTL = 1,
    HSM_DEFAULT_ALERTS_DISABLE_STATUS_CHANGE = 2,
} hsm_default_alerts_options_t;
typedef struct hsm_sensor_options_t
{
    int64_t ttl_ms;
    int32_t unit;
    const char* description; 
    int64_t keep_history_ms;
    int64_t self_destroy_ms;
    int32_t display_unit;
    int32_t statistics; 
    int32_t is_singleton;
    int32_t aggregate_data;
    int32_t enable_grafana;
    bool is_computer_sensor;
    int32_t sensor_location;
    int64_t default_alert_options;
} hsm_sensor_options_t;
hsm_result_t hsm_collector_create_double_bar_sensor_with_options(
    hsm_collector_t* collector,
    const char* path,
    int64_t bar_period_ms,
    int64_t post_period_ms,
    int32_t precision,
    const hsm_sensor_options_t* options,
    hsm_sensor_t** out_sensor);
void hsm_sensor_release(hsm_sensor_t* sensor);
hsm_result_t hsm_sensor_add_int(
    hsm_sensor_t* sensor,
    int32_t value,
    hsm_sensor_status_t status,
    const char* comment);
hsm_result_t hsm_sensor_add_bool(
    hsm_sensor_t* sensor,
    bool value,
    hsm_sensor_status_t status,
    const char* comment);
hsm_result_t hsm_sensor_add_double(
    hsm_sensor_t* sensor,
    double value,
    hsm_sensor_status_t status,
    const char* comment);
hsm_result_t hsm_sensor_add_string(
    hsm_sensor_t* sensor,
    const char* value,
    hsm_sensor_status_t status,
    const char* comment);
hsm_result_t hsm_sensor_add_enum(
    hsm_sensor_t* sensor,
    int32_t value,
    hsm_sensor_status_t status,
    const char* comment);
hsm_result_t hsm_sensor_add_version(
    hsm_sensor_t* sensor,
    int32_t major,
    int32_t minor,
    int32_t build,
    int32_t revision,
    hsm_sensor_status_t status,
    const char* comment);
hsm_result_t hsm_sensor_add_bar_double(hsm_sensor_t* sensor, double value);
const char* hsm_collector_last_error(const hsm_collector_t* collector);