src/probe-linux/hsm-collector-sys/src/lib.rs


    pub fn hsm_collector_create_double_bar_sensor_with_options(
        collector: *mut hsm_collector_t,
        path: *const c_char,
        bar_period_ms: i64,
        post_period_ms: i64,
        precision: i32,
        options: *const hsm_sensor_options_t,
        out_sensor: *mut *mut hsm_sensor_t,
    ) -> hsm_result_t;

    pub fn hsm_sensor_release(sensor: *mut hsm_sensor_t);

    pub fn hsm_sensor_add_int(
        sensor: *mut hsm_sensor_t,
        value: i32,
        status: hsm_sensor_status_t,
        comment: *const c_char,
    ) -> hsm_result_t;
    pub fn hsm_sensor_add_bool(
        sensor: *mut hsm_sensor_t,
        value: bool,
        status: hsm_sensor_status_t,
        comment: *const c_char,
    ) -> hsm_result_t;
    pub fn hsm_sensor_add_double(
        sensor: *mut hsm_sensor_t,
        value: f64,
        status: hsm_sensor_status_t,
        comment: *const c_char,
    ) -> hsm_result_t;
    pub fn hsm_sensor_add_string(
        sensor: *mut hsm_sensor_t,
        value: *const c_char,
        status: hsm_sensor_status_t,
        comment: *const c_char,
    ) -> hsm_result_t;
    pub fn hsm_sensor_add_enum(
        sensor: *mut hsm_sensor_t,
        value: i32,
        status: hsm_sensor_status_t,
        comment: *const c_char,
    ) -> hsm_result_t;
    pub fn hsm_sensor_add_bar_double(sensor: *mut hsm_sensor_t, value: f64) -> hsm_result_t;
    /// Version value: pass -1 for an absent build/revision component.
    pub fn hsm_sensor_add_version(
        sensor: *mut hsm_sensor_t,
        major: i32,
        minor: i32,
        build: i32,
        revision: i32,
        status: hsm_sensor_status_t,
        comment: *const c_char,
    ) -> hsm_result_t;

    /// Last error text recorded on the collector. Valid until the next failing call on the same
    /// collector; never NULL.
    pub fn hsm_collector_last_error(collector: *const hsm_collector_t) -> *const c_char;
}

#[cfg(feature = "linux-default-sensors")]
extern "C" {
    /// Install the Linux `/proc`-based metric-source factory so the value-typed default sensors
    /// (Total CPU, Free RAM, free disk, process counters) read live values. Call before Start.
    ///
    /// TODO(#1414): this symbol is added by workstream 1 and is absent from master's collector,
    /// which is why the whole block is behind the `linux-default-sensors` feature. Linking with
    /// the feature on against an older collector fails at link time — by design, so the gap is
    /// never silent.
    pub fn hsm_collector_install_linux_metric_sources(
        collector: *mut hsm_collector_t,
    ) -> hsm_result_t;
}

/// Whether the crate was built with the Linux default-sensor factory bound (#1414).
pub const HAS_LINUX_METRIC_SOURCES: bool = cfg!(feature = "linux-default-sensors");

/// Rust half of the ABI layout guard.
///
/// The C half lives in `build.rs`: it compiles `static_assert`s over the real header, so a field
/// appended, inserted or reordered on the C side fails the BUILD. These tests close the other
/// direction — that this crate's Rust mirrors still match the same expected layout. Both sides read
/// one source of truth, the `LAYOUTS` table in `build.rs`, through the `HSM_ABI_*` env vars it
/// emits; a `size_of` compared against a constant written in this file would prove nothing about C.
#[cfg(all(test, target_pointer_width = "64"))]
mod layout_tests {
    use super::*;
    use std::mem::{align_of, offset_of, size_of};

    /// Expected size/alignment as `build.rs` asserted them against the C header.
    macro_rules! expected {
        ($stem:literal) => {
            (
                env!(concat!("HSM_ABI_", $stem, "_SIZE"))
                    .parse::<usize>()
                    .expect("size"),
                env!(concat!("HSM_ABI_", $stem, "_ALIGN"))
                    .parse::<usize>()
                    .expect("align"),
            )
        };
    }

    #[test]
    fn collector_options_layout_matches_the_c_struct() {
        let (size, align) = expected!("HSM_COLLECTOR_OPTIONS_T");
        assert_eq!(size_of::<hsm_collector_options_t>(), size);
        assert_eq!(align_of::<hsm_collector_options_t>(), align);
        assert_eq!(offset_of!(hsm_collector_options_t, access_key), 0);
        assert_eq!(offset_of!(hsm_collector_options_t, port), 16);
        assert_eq!(offset_of!(hsm_collector_options_t, max_queue_size), 48);
        assert_eq!(
            offset_of!(hsm_collector_options_t, allow_untrusted_server_certificate),
            68
        );
        assert_eq!(
            offset_of!(hsm_collector_options_t, exception_deduplicator_window_ms),
            72
        );
        assert_eq!(
            offset_of!(hsm_collector_options_t, max_deduplicated_messages),
            80
        );
    }

    #[test]
    fn sensor_options_layout_matches_the_c_struct() {
        let (size, align) = expected!("HSM_SENSOR_OPTIONS_T");
        assert_eq!(size_of::<hsm_sensor_options_t>(), size);
        assert_eq!(align_of::<hsm_sensor_options_t>(), align);
        assert_eq!(offset_of!(hsm_sensor_options_t, ttl_ms), 0);
        assert_eq!(offset_of!(hsm_sensor_options_t, description), 16);
        assert_eq!(offset_of!(hsm_sensor_options_t, is_computer_sensor), 60);
        assert_eq!(offset_of!(hsm_sensor_options_t, default_alert_options), 72);
    }

    #[test]
    fn enum_option_layout_matches_the_c_struct() {
        let (size, align) = expected!("HSM_ENUM_OPTION_T");
        assert_eq!(size_of::<hsm_enum_option_t>(), size);
        assert_eq!(align_of::<hsm_enum_option_t>(), align);
        assert_eq!(offset_of!(hsm_enum_option_t, value), 8);
        assert_eq!(offset_of!(hsm_enum_option_t, description), 24);
    }

    #[test]
    fn default_sensor_params_layout_matches_the_c_struct() {
        let (size, align) = expected!("HSM_DEFAULT_SENSOR_PARAMS_T");
        assert_eq!(size_of::<hsm_default_sensor_params_t>(), size);
        assert_eq!(align_of::<hsm_default_sensor_params_t>(), align);
        assert_eq!(offset_of!(hsm_default_sensor_params_t, process_name), 0);
        assert_eq!(offset_of!(hsm_default_sensor_params_t, is_host_service), 32);
        assert_eq!(offset_of!(hsm_default_sensor_params_t, product_version), 40);
    }

    #[test]
    fn the_linked_library_is_the_header_this_crate_was_built_against() {
        // Header/library skew is possible whenever HSM_COLLECTOR_LIB_DIR points at a prebuilt
        // collector: the declarations would come from one version and the code from another, which
        // is the same stack-corrupting mismatch the build-time static_asserts prevent in-tree.
        let header: i32 = env!("HSM_COLLECTOR_HEADER_VERSION")
            .parse()
            .expect("version");
        let linked = unsafe { hsm_collector_version() };
        assert_eq!(
            linked,
            header,
            "linked collector {}.{}.{} does not match the header this crate was built against \
             ({}.{}.{})",
            linked / 10000,
            (linked / 100) % 100,
            linked % 100,
            header / 10000,
            (header / 100) % 100,
            header % 100
        );
    }
}
